Learn about html basic how to create  form  and input field -text, email,radio, checkbox,submit button

--- a/Practice_2.html
+++ b/Practice_2.html
@@ -1,1 +1,19 @@
 <!--     Wirte a HTML code with simple form with two input fields and a submit button.  -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forms</title>
+</head>
+<body>
+    <form>
+        <label for="name">  Name : </label>
+        <input type="text" id="name" name="name"><br>
+        <label>Email : </label>
+        <input type="email" id="email" name="email"><br>
+        <input type="submit" value="submit">
+    </form>
+</body>
+</html>
