--- a/Practice_2.html
+++ b/Practice_2.html
@@ -8,11 +8,42 @@
     <title>Forms</title>
 </head>
 <body>
+    <!--         form tag is use to create the forms in html    -->
     <form>
+
         <label for="name">  Name : </label>
-        <input type="text" id="name" name="name"><br>
+    <!-- Sigle line input field for text    -->
+        <input type="text" id="name" name="name"><br><br>
+
+
         <label>Email : </label>
-        <input type="email" id="email" name="email"><br>
+    <!-- Sigle line input field for email    -->
+        <input type="email" id="email" name="email"><br><br>
+
+    
+        <label>Select Gender : </label>
+
+        <label for="male">Male</label>
+        <input type="radio" id="male" value="male">
+
+        <label for="female">Female</label>
+        <input type="radio" id="female" value="female">
+
+        <label for="other">Others</label>
+        <input type="radio" id="other" value="other"><br><br>
+    <!--                                            Checkbox                                            -->
+        <label>Select the Language : </label>
+        <label for="marathi">Marathi</label>
+        <input type="checkbox" id="marathi" value="marathi">
+
+        <label for="english">English</label>
+        <input type="checkbox" id="english" value="english">
+
+        <label for="hindi">Hindi</label>
+        <input type="checkbox" id="hindi" value="hindi"><br><br>
+
+        
+    <!--                    Submit button                     -->
         <input type="submit" value="submit">
     </form>
 </body>
