Learn about  the  basic table in html

--- a/Practice_2.html
+++ b/Practice_2.html
@@ -24,13 +24,13 @@
         <label>Select Gender : </label>
 
         <label for="male">Male</label>
-        <input type="radio" id="male" value="male">
+        <input type="radio"  name="Gender"  id="male" value="male">
 
         <label for="female">Female</label>
-        <input type="radio" id="female" value="female">
+        <input type="radio" name="Gender"  id="female" value="female">
 
         <label for="other">Others</label>
-        <input type="radio" id="other" value="other"><br><br>
+        <input type="radio" name="Gender" id="other" value="other"><br><br>
     <!--                                            Checkbox                                            -->
         <label>Select the Language : </label>
         <label for="marathi">Marathi</label>
