Creating the small project for the understanding   of basic html css

--- a/Practice_2.html
+++ b/Practice_2.html
@@ -1,5 +1,4 @@
 <!--     Wirte a HTML code with simple form with two input fields and a submit button.  -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +8,8 @@
 </head>
 <body>
     <!--         form tag is use to create the forms in html    -->
-    <form>
+    <form style="border: 1px solid black;
+                width: 500;"><br>
 
         <label for="name">  Name : </label>
     <!-- Sigle line input field for text    -->
@@ -42,9 +42,13 @@
         <label for="hindi">Hindi</label>
         <input type="checkbox" id="hindi" value="hindi"><br><br>
 
+
+        <label for="hindi">Hindi</label>
+        <input type="image" id="hindi" value="hindi"><br><br>
         
     <!--                    Submit button                     -->
-        <input type="submit" value="submit">
+        <button class="submit">Submit</button><br><br>
     </form>
 </body>
 </html>
+
