upgrade in page

--- a/Project_2_html_css/index.html
+++ b/Project_2_html_css/index.html
@@ -38,6 +38,15 @@
           </div>
         </div>
       </div>
+      <div id="work">
+            <div id="work1">
+              <h3>( what I do )</h3>
+              <i class="ri-arrow-right-down-line"></i>
+            </div>
+            <div id="work2">
+              
+            </div>
+      </div>
     </div>
   </body>
 </html>
