--- a/Practice_11.html
+++ b/Practice_11.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="Practice_11.css" />
   </head>
   <body>
-    <div class="p1">
+    <!--<div class="p1">
       div1 Lorem ipsum dolor sit amet consectetur adipisicing elit.
       Exercitationem dolores dolor nemo hic iure a, nihil architecto perferendis
       deserunt illo, provident nam voluptate quos. Voluptatum impedit quibusdam
       nesciunt excepturi recusandae.
     </div>
-    <div id="p2"></div>
+    <div id="p2"></div>-->
 
     <div class="car1"></div>
     <div class="car2"></div>
